  The "e" command now uses the RO client commands instead of the number.
- Vigor condensation renamed to Vigor Condensation for consistency
- equipAuto onTeleport changed to teleportAuto_equip_{slot}
  equipAuto skills is no longer used, use <skill slot>_equip_<slot>
  equipAuto syntax is changed, read below.
  equipAuto_def is removed.
- avoid_ignore_# is replaced with avoidGM_ignoreList (see below)

Bug fixes:
- 'i' command now displays equipped arrows under Equipment (Equipped).
- Quick-and-dirty @{$char->{inventory}} > 0 fix for useSelf_item
  dcOnEmpty. (Will fail if your bot doesn't carry anything at all.)
- Same quick-and-dirty fix for "Auto-storaging due to insufficient ___".
- Don't try to statsAddAuto before the stat point info has been received.
- Equipped arrows will now show how many of them are left.
- Shop title in shop.txt is detected better.
- Don't send name request for perfectly hidden players and NPCs.
- Fix autoTalkCont causing next step to happen too fast.
- Don't redirect command output if XKore_silent is enabled.
- Fix "party leave" crash when not in party.
- Only teleport-on-hit from monsters if they do not miss.
- Hopefully fix daggersins' weapons ending up on the wrong hand.
- "Player Connected" did not trigger 'player' plugin call.
- Guild auto deny timeout was not included in timeouts.txt.
  Deal auto deny timeout was not being used.
- Increase the maximum vending price to 99,990,000z.
- Fix job_equipment_hair_change packet detecting actor incorrectly.
- Pythagorean distances are no longer used; we now go by number of
  steps. This should make openkore more efficient in determining whether
  it is in range to attack.
- 'private 1' in servers.txt is also effective when changing map server.
- Reverted Pythagorean distances; causes bots to walk around drunk.
- openkore could not useSelf_item items in inventory index 0 due to
  (0 == '') being true (affecting $skipID in findIndexStringList_lc).
- Fix crash with the weight command.